# topology-aware-gnn-power-flow

./: .gitignore  LICENSE  Physics_Informed_Graph_Neural_Networks_(H_PIGNN).ipynb  README.md  REPORT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: reproduce_on_colab.ipynb
results/: ablation_edgeweights_topology.json  ablation_k.csv  crossfeeder.json  physics_finetune.json  supervised.json  supervised_case69.json  topology_general.json  warmstart_nr.json  warmstart_nr_per_scenario.csv
scripts/: ablate_edgeweights_topology.py  ablate_k.py  crossfeeder.py  evaluate.py  finetune_physics.py  make_figures.py  train.py  train_topology_general.py  warmstart_nr.py
src/pignn/: __init__.py  case69.py  config.py  data.py  evaluate.py  model.py  physics.py  topology.py  train.py
tests/: test_baselines.py  test_case69.py  test_physics.py  test_topology.py
